# demonix

./: .travis.yml  CMakeLists.txt  config.hpp.cmake
ci/: install-demonix.sh
cmake/: FindFFTW.cmake  demonix_tools.cmake
src/: main.cpp
src/tools/: demonix_interface.hpp  linearAlgebraTools.cpp  linearAlgebraTools.hpp
src/tools/fft/: fftw3_basicusage.c  fftw_tools.hpp
